# amazur_backend_test

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260616_0001_initial.py
app/: main.py
app/api/: dependencies.py  router.py  routes_campaigns.py  schemas.py
app/core/: config.py
app/db/: base.py  session.py
app/models/: campaign.py  campaign_schedule.py  common.py  evaluation_log.py
app/repositories/: campaign_repository.py
app/rules/: base.py  budget_exceeded.py  low_stock.py  management_disabled.py  schedule.py
app/services/: campaign_service.py  rule_engine.py  schedule_matcher.py
docker/postgres-init/: 001_schema.sql
tests/integration/: test_api.py
tests/unit/: test_rule_engine.py
