[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marketplace-campaign-rules"
version = "0.1.0"
description = "Rule engine for marketplace campaign status management"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.0,<1.0.0",
    "uvicorn[standard]>=0.35.0,<1.0.0",
    "sqlalchemy>=2.0.41,<3.0.0",
    "alembic>=1.16.0,<2.0.0",
    "psycopg[binary]>=3.2.9,<4.0.0",
    "pydantic>=2.11.0,<3.0.0",
    "pydantic-settings>=2.10.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0,<9.0.0",
    "httpx>=0.28.0,<1.0.0",
    "pytest-cov>=6.2.0,<7.0.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "C4"]
